# csvchk-py

./: Makefile  README.md  __init__.py  csvchk.py  pyproject.toml  requirements.txt  setup.py  test.py
src/csvchk/: __init__.py  csvchk.py
src/csvchk/tests/: duplicate_cols.csv  nohdr.txt  test-iso-8859-1.csv
test/: sparse.csv  test2.txt
tests/: csvchk_test.py  test.csv  test.tab  test.txt
